# cbg-invoices

./: docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/alembic/versions/: 0010_invoice_claimed_at.py  0011_user_notification_prefs.py  0012_qbo_token_nullable_auth.py  3fe5b9c1464c_add_notification_settings.py
backend/app/: config.py  db.py  deps.py  main.py
backend/app/models/: __init__.py  access_request.py  coding_option.py  invoice.py  notification_settings.py  qbo_token.py  trusted_sender_domain.py  user_notification_prefs.py
backend/app/routers/: access_requests.py  audit.py  coding_options.py  invoices.py  notifications.py  qbo.py  trusted_domains.py  webhooks.py
backend/app/schemas/: audit.py  coding_option.py  invoice.py  notification.py  qbo.py
backend/app/services/: admin_cleanup.py  assignment_notify.py  extraction.py  logto_admin.py  notifications.py  qbo_client.py  qbo_posting.py  qbo_sync.py  resend_inbound.py  trusted_domains.py
backend/scripts/: clear_operational_data.py
backend/tests/: conftest.py  test_admin_cleanup.py  test_assignment_notify.py  test_extraction_fallback.py  test_invoice_actions.py  test_invoice_assignment_permissions.py  test_notification_prefs.py  test_qbo_oauth_state.py  test_qbo_sync_pruning.py  test_qbo_token_lifecycle.py  test_vendor_match.py  test_webhook_body_render.py
frontend/: eslint.config.js  package.json  pnpm-lock.yaml
frontend/src/: main.tsx  routeTree.gen.ts  types.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/auth/: RequestAccessModal.tsx
frontend/src/components/invoices/: AssigneePicker.tsx  ExtractedFieldsForm.tsx  InvoiceIdentityHeader.tsx  InvoiceQueue.tsx  InvoiceRow.tsx  InvoiceSummary.tsx  NotifyModal.tsx  PdfViewer.tsx  QueueRow.tsx  (+3 more)
frontend/src/lib/: auditActions.tsx  auth.ts  format.ts  invoiceViews.ts  invoices.ts  notifications.ts  queryKeys.ts  releases.tsx  settingsSections.ts  upload.ts  users.ts
frontend/src/routes/: _authed.audit.tsx  _authed.invoices.tsx  _authed.invoices_.$id.tsx  _authed.projects.tsx  _authed.quickbooks.tsx  _authed.settings.tsx  _authed.team.tsx  _authed.vendors.tsx  _authed.whats-new.tsx  eula.tsx  index.tsx  invite.tsx  privacy.tsx
(+9 files in other folders)
