[project]
name = "cambridge-invoice-portal-backend"
version = "0.1.0"
description = "Cambridge Invoice Portal backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
    "anthropic>=0.40.0",
    "openai>=2.8.1",
    "pypdf>=5.1.0",
    "pdf2image>=1.17.0",
    "Pillow>=11.0.0",
    "boto3>=1.35.0",
    "python-jose[cryptography]>=3.3.0",
    "PyJWT[crypto]>=2.9.0",
    "email-validator>=2.2.0",
    "python-dateutil>=2.9.0",
    "rapidfuzz>=3.10.0",
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = [
    "E501",   # line length — enforced loosely, formatter handles it
    "N811",   # `UUID as PgUUID` etc. — deliberate SQLAlchemy import aliases
    "UP042",  # `class X(str, Enum)` is intentional (SQLAlchemy native_enum=False storage)
    "N818",   # descriptive exception names (EmailNotConfigured) over an Error suffix
]

[tool.ruff.lint.flake8-bugbear]
# `Depends(...)`, `Query(...)` etc. in argument defaults is the FastAPI idiom,
# not a mutable-default bug.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Body",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Put the project root on sys.path so `pytest` (not just `python -m pytest`)
# can import the `app` package. The Dockerfile installs deps before the
# source is copied, so the editable install doesn't register `app` on its own.
pythonpath = ["."]
